k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-story-lab-service
  namespace: k8s-lab
  labels:
    app: k8s-story-lab
spec:
  selector:
    app: k8s-story-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
