k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-story-lab-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.elroy.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-story-lab-service
                port:
                  number: 80
